--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527765786"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    335 points
+                                    336 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reuters.com/article/us-health-lifespan/china-overtakes-us-for-healthy-lifespan-who-data-idUSKCN1IV15L">China overtakes U.S. for healthy lifespan: WHO data</a>
+                                    <a href="https://80000hours.org/podcast/episodes/aaron-hamlin-voting-refor/">Politics is bad because we use an 18th century voting system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17192639">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205357">
                                         
-                                            203 comments
+                                            307 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Element_">Element_</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527721234"
+                                            href="https://news.ycombinator.com/user?id=robertwiblin">robertwiblin</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527861562"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     309 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527903003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527903604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
