--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.businessinsider.com/2-billion-startup-github-could-be-for-sale-microsoft-2018-5">Microsoft and GitHub have held acquisition talks</a>
+                                    <a href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208293">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17183057">
                                         
-                                            339 comments
+                                            467 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527876717"
+                                            href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527629280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    267 points
+                                    268 points
                                 </span>
                             </td>
                         </tr>
@@ -501,13 +501,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208004">
                                         
-                                            76 comments
+                                            77 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527875296"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    237 points
+                                    240 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527903003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527903604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
