--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://bradfrost.com/blog/link/replacing-jquery-with-vue-js-no-build-step-necessary/">React is the new jQuery</a>
+                                    <a href="https://qz.com/1294282/the-tesla-model-3-cost-28000-to-build-german-engineers-say-and-it-still-may-not-be-profitable/">The Tesla Model 3 cost $28,000 to build</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17211283">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17207590">
                                         
-                                            7 comments
+                                            13 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527894417"
+                                            href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527873280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    20 points
+                                    21 points
                                 </span>
                             </td>
                         </tr>
@@ -309,7 +309,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17210982">
                                         
-                                            5 comments
+                                            6 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=haxiomic">haxiomic</a></strong> &nbsp;•&nbsp;
@@ -435,7 +435,7 @@
                                             href="https://news.ycombinator.com/user?id=utopcell">utopcell</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527883435"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    12 points
+                                    13 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527906004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527906604" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
