--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -285,7 +285,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17203341">
                                         
-                                            145 comments
+                                            146 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=adriancooney">adriancooney</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527869395"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    186 points
+                                    187 points
                                 </span>
                             </td>
                         </tr>
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.com/news/world-australia-44326034">ANZ, Deutsche Bank and Citigroup face 'criminal cartel' charges</a>
+                                    <a href="https://www.polygon.com/2018/6/1/17413542/burnout-mental-health-awareness-youtube-elle-mills-el-rubius-bobby-burns-pewdiepie">YouTube’s top creators are burning out</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17202827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17210164">
                                         
-                                            45 comments
+                                            102 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=lifeisstillgood">lifeisstillgood</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527831219"
+                                            href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     159 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527907203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527907804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
