--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://support.google.com/faqs/answer/174717?hl=en">What is 1e100.net?</a>
+                                    <a href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17208004">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17183057">
                                         
-                                            86 comments
+                                            467 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jstrieb">jstrieb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527875296"
+                                            href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527629280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    267 points
+                                    268 points
                                 </span>
                             </td>
                         </tr>
@@ -501,7 +501,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17208876">
                                         
-                                            213 comments
+                                            215 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527912004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527912605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
