--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -183,17 +183,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://h50146.www5.hpe.com/products/software/oe/linux/mainstream/support/lcc/pdf/PostgreSQL_11_New_Features_beta1_en_20180525-1.pdf">PostgreSQL 11 New Features with Examples (Beta1) [pdf]</a>
+                                    <a href="https://userinterfacing.com/how-to-improve-on-naming-contexts-in-domain-driven-design/">How to Improve on Naming Contexts in Domain-Driven Design</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17205635">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205793">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=snaga">snaga</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527863706"
+                                            href="https://news.ycombinator.com/user?id=acconrad">acconrad</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527864847"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     6 points
                                 </span>
@@ -207,19 +207,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://praxagora.com/fiction/hardware_guy/">Hardware Guy – A short story (2010)</a>
+                                    <a href="http://h50146.www5.hpe.com/products/software/oe/linux/mainstream/support/lcc/pdf/PostgreSQL_11_New_Features_beta1_en_20180525-1.pdf">PostgreSQL 11 New Features with Examples (Beta1) [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17212774">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205635">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rkda">rkda</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527914767"
+                                            href="https://news.ycombinator.com/user?id=snaga">snaga</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527863706"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    5 points
+                                    6 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527918604" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527919204" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
