--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -219,7 +219,7 @@
                                             href="https://news.ycombinator.com/user?id=adtac">adtac</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527858254"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    163 points
+                                    164 points
                                 </span>
                             </td>
                         </tr>
@@ -267,7 +267,7 @@
                                             href="https://news.ycombinator.com/user?id=brennankreiman">brennankreiman</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527894417"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    145 points
+                                    148 points
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527882885"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    119 points
+                                    120 points
                                 </span>
                             </td>
                         </tr>
@@ -363,7 +363,7 @@
                                             href="https://news.ycombinator.com/user?id=curtis">curtis</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527883700"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    114 points
+                                    115 points
                                 </span>
                             </td>
                         </tr>
@@ -411,7 +411,7 @@
                                             href="https://news.ycombinator.com/user?id=champagnepapi">champagnepapi</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527873591"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    99 points
+                                    100 points
                                 </span>
                             </td>
                         </tr>
@@ -519,19 +519,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/mgechev/revive">Revive – Fast, configurable, extensible linter for Go</a>
+                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17211176">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
                                         
-                                            21 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=angelinaii">angelinaii</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527893563"
+                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527884753"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    77 points
+                                    78 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527931204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527931804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
