--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.com/news/business-44341490">Google 'to end' Pentagon Artificial Intelligence project</a>
+                                    <a href="https://github.com/iminehard/gpunoise/wiki">The effect of cryptocurrency mining on LTE spectrum</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17213703">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17211936">
                                         
-                                            6 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=peterkelly">peterkelly</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527931348"
+                                            href="https://news.ycombinator.com/user?id=iminehard">iminehard</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527901359"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    33 points
+                                    35 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527934203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527934803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
