--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://kb.apify.com/tips-and-tricks/several-tips-how-to-bypass-website-anti-scraping-protections">Bypassing website anti-scraping protections</a>
+                                    <a href="http://www.lihaoyi.com/post/ZeroOverheadTreeProcessingwiththeVisitorPattern.html?a=1">Zero-Overhead Tree Processing with the Visitor Pattern</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17203903">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17165866">
                                         
-                                            105 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jardah">jardah</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527846557"
+                                            href="https://news.ycombinator.com/user?id=lihaoyi">lihaoyi</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527404857"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    214 points
+                                    215 points
                                 </span>
                             </td>
                         </tr>
@@ -339,7 +339,7 @@
                                             href="https://news.ycombinator.com/user?id=oxinabox">oxinabox</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1527845420"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    204 points
+                                    205 points
                                 </span>
                             </td>
                         </tr>
@@ -458,7 +458,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527934803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527935403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
