--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -183,19 +183,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/iminehard/gpunoise/wiki">The effect of cryptocurrency mining on LTE spectrum</a>
+                                    <a href="https://www.fastcodesign.com/90169957/the-miserable-economy-airplane-seat-just-got-a-major-redesign">Redesigning the Economy Airline Seat</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17211936">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17206224">
                                         
-                                            13 comments
+                                            32 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=iminehard">iminehard</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527901359"
+                                            href="https://news.ycombinator.com/user?id=ohjeez">ohjeez</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527867023"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    36 points
+                                    37 points
                                 </span>
                             </td>
                         </tr>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527936004" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527936603" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
