--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.entrepidpartners.com/how-to-sell-guide">How to Sell – a guide for SaaS startups</a>
+                                    <a href="https://www.polygon.com/2018/6/1/17413542/burnout-mental-health-awareness-youtube-elle-mills-el-rubius-bobby-burns-pewdiepie">YouTube’s top creators are burning out</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17188232">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17210164">
                                         
-                                            43 comments
+                                            159 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jhchen">jhchen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527692685"
+                                            href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527886430"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     295 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527964204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527964803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
