--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -285,7 +285,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17203903">
                                         
-                                            112 comments
+                                            113 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jardah">jardah</a></strong> &nbsp;•&nbsp;
@@ -519,17 +519,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.fastcompany.com/40579141/microsoft-is-now-worth-more-than-google">Microsoft is now worth more than Alphabet</a>
+                                    <a href="http://www.bbc.co.uk/news/resources/idt-sh/faroe_islands_postal_service">Tales from the far-flung Faroes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17196880">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17212917">
                                         
-                                            176 comments
+                                            65 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=Bhilai">Bhilai</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527779516"
+                                            href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527917872"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     209 points
                                 </span>
@@ -581,7 +581,7 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527970804" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1527971404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
